--- a/templates/base.html.twig
+++ b/templates/base.html.twig
@@ -1,85 +1,64 @@
 <!DOCTYPE html>
 <html lang="fr">
-  <head>
-    <meta charset="utf-8" />
-    <meta name="viewport" content="width=device-width, initial-scale=1" />
-    <title>{% block title %}Scandidecor{% endblock %}</title>
-    {% block stylesheets %}
-    <link rel="stylesheet" href="https://bootswatch.com/5/lux/bootstrap.min.css"/>
-    <link rel="stylesheet" href="{{asset("css/styles.css")}}" />
-    {% endblock %}
-  </head>
-  <body>
-    <nav class="navbar navbar-expand-lg bg-body-tertiary">
-      <div class="container-fluid">
-        <a class="navbar-brand" href="{{ path('app_accueil') }}">Scandidecor</a>
-        <button
-          class="navbar-toggler"
-          type="button"
-          data-bs-toggle="collapse"
-          data-bs-target="navbarColor04"
-          aria-controls="navbarColor04"
-          aria-expanded="false"
-          aria-label="Toggle navigation"
-        >
-          <span class="navbar-toggler-icon"></span>
-        </button>
-        <div class="collapse navbar-collapse" id="navbarColor04">
-          <ul class="navbar-nav me-auto">
-            <li class="nav-item">
-              <a class="nav-link active" href="{{ path('app_accueil') }}"
-                >Home
-                <span class="visually-hidden">(current)</span>
-              </a>
-            </li>
-            <li class="nav-item">
-              <a class="nav-link" href=""></a>
-            </li>
-            <li class="nav-item">
-              <a class="nav-link" href="">Pricing</a>
-            </li>
-            <li class="nav-item">
-              <a class="nav-link" href="">About</a>
-            </li>
-            <li class="nav-item dropdown">
-              <a
-                class="nav-link dropdown-toggle"
-                data-bs-toggle="dropdown"
-                href=""
-                role="button"
-                aria-haspopup="true"
-                aria-expanded="false"
-                >Dropdown</a
-              >
-              <div class="dropdown-menu">
-                <a class="dropdown-item" href="">Action</a>
-                <a class="dropdown-item" href="">Another action</a>
-                <a class="dropdown-item" href="">Something else here</a>
-                <div class="dropdown-divider"></div>
-                <a class="dropdown-item" href="">Separated link</a>
-              </div>
-            </li>
-          </ul>
-          <form class="d-flex">
-            <input
-              class="form-control me-sm-2"
-              type="search"
-              placeholder="Search"
-            />
-            <button class="btn btn-secondary my-2 my-sm-0" type="submit">
-              Search
-            </button>
-          </form>
-        </div>
-      </div>
-    </nav>
-    <h1 class="titre"> Scandidecor</h1>
-    {% block javascripts %}
-    <script
-      src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/js/bootstrap.bundle.min.js"
-      integrity="sha384-C6RzsynM9kWDrMNeT87bh95OGNyZPhcTNXj1NW7RuBCsyN/o0jlpcV8Qyq46cDfL"
-      crossorigin="anonymous"
-    ></script>
-    {% endblock %}
-  </body>
+	<head>
+		<meta charset="utf-8"/>
+		<meta name="viewport" content="width=device-width, initial-scale=1"/>
+		<title>
+			{% block title %}Scandidecor
+			{% endblock %}
+		</title>
+		{% block stylesheets %}
+			<link rel="stylesheet" href="https://bootswatch.com/5/lux/bootstrap.min.css"/>
+			<link rel="stylesheet" href="{{asset("css/styles.css")}}"/>
+		{% endblock %}
+	</head>
+	<body>
+		<nav class="navbar navbar-expand-lg bg-body-tertiary">
+			<div class="container-fluid">
+				<a class="navbar-brand" href="{{ path('app_accueil') }}">
+					<img src="{{asset("css/images/logo.PNG")}}" class="navbar-brand logo-img" href="{{ path('app_accueil') }}" alt="logo de la marque">
+				</a>
+				<button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="navbarColor04" aria-controls="navbarColor04" aria-expanded="false" aria-label="Toggle navigation">
+					<span class="navbar-toggler-icon"></span>
+				</button>
+				<div class="collapse navbar-collapse" id="navbarColor04">
+					<ul class="navbar-nav me-auto">
+						<li class="nav-item">
+							<a class="nav-link active" href="{{ path('app_accueil') }}"> Accueil <span class="visually-hidden">(current)</span></a>
+						</li>
+						<li class="nav-item">
+							<a class="nav-link" href=""></a>
+						</li>
+						<li class="nav-item">
+							<a class="nav-link" href=""> Inspirations </a>
+						</li>
+						<li class="nav-item dropdown">
+							<a class="nav-link dropdown-toggle" data-bs-toggle="dropdown" href="" role="button" aria-haspopup="true" aria-expanded="false">Produits</a>
+							<div class="dropdown-menu">
+								<a class="dropdown-item" href="">Nouveautés</a>
+								<a class="dropdown-item" href="">Collection scandinave</a>
+								<a class="dropdown-item" href="">Collection aesthetic coloré</a>
+								<div class="dropdown-divider"></div>
+								<a class="dropdown-item" href="">Une suggestion de collection?</a>
+							</div>
+						</li>
+						<li class="nav-item">
+							<a class="nav-link" href="">Contact</a>
+						</li>
+					</ul>
+					<form class="d-flex">
+						<input class="form-control me-sm-2" type="search" placeholder="Rechercher"/>
+						<button class="btn btn-secondary my-2 my-sm-0" type="submit">
+							Rechercher
+						</button>
+					</form>
+				</div>
+			</div>
+		</nav>
+	{% block body %}
+{% endblock %}
+		{% block javascripts %}
+			<script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/js/bootstrap.bundle.min.js" integrity="sha384-C6RzsynM9kWDrMNeT87bh95OGNyZPhcTNXj1NW7RuBCsyN/o0jlpcV8Qyq46cDfL" crossorigin="anonymous"></script>
+		{% endblock %}
+	</body>
 </html>
