--- a/templates/base/index.html.twig
+++ b/templates/base/index.html.twig
@@ -1,4 +1,32 @@
-{% extends 'base.html.twig' %} {% block title %}{{ parent() }}Accueil{%
-endblock%} {% block body %}
-<h1 class="text-center text-primary">Scandidecor</h1>
+{% extends 'base.html.twig' %}
+{% block title %}{{ parent() }}
+{% endblock %}
+{% block body %}
+<h1 class="titre">Scandidecor</h1>
+<div id="carouselExampleIndicators" class="carousel slide">
+			<div class="carousel-indicators">
+				<button type="button" data-bs-target="#carouselExampleIndicators" data-bs-slide-to="0" class="active" aria-current="true" aria-label="Slide 1"></button>
+				<button type="button" data-bs-target="#carouselExampleIndicators" data-bs-slide-to="1" aria-label="Slide 2"></button>
+				<button type="button" data-bs-target="#carouselExampleIndicators" data-bs-slide-to="2" aria-label="Slide 3"></button>
+			</div>
+			<div class="carousel-inner">
+				<div class="carousel-item active">
+					<img src="{{asset("css/images/home1.PNG")}}" class="d-block w-100" alt="...">
+				</div>
+				<div class="carousel-item">
+					<img src="{{asset("css/images/home2.PNG")}}" class="d-block w-100" alt="...">
+				</div>
+				<div class="carousel-item">
+					<img src="{{asset("css/images/home3.PNG")}}" class="d-block w-100" alt="...">
+				</div>
+			</div>
+			<button class="carousel-control-prev" type="button" data-bs-target="#carouselExampleIndicators" data-bs-slide="prev">
+				<span class="carousel-control-prev-icon" aria-hidden="true"></span>
+				<span class="visually-hidden">Previous</span>
+			</button>
+			<button class="carousel-control-next" type="button" data-bs-target="#carouselExampleIndicators" data-bs-slide="next">
+				<span class="carousel-control-next-icon" aria-hidden="true"></span>
+				<span class="visually-hidden">Next</span>
+			</button>
+		</div>
 {% endblock %}
