--- a/public/css/styles.css
+++ b/public/css/styles.css
@@ -12,3 +12,34 @@
 }
 
 .navbar{ max-height: 70px; }
+
+.ajout-panier{
+    display: inline-block;
+    padding: 10px 20px;
+    border: none;
+    border-radius: 30px;
+    background-color: #ffffff;
+    color: #6C757D;
+    text-align: center;
+    text-decoration: none;
+    font-size: 16px;
+    font-weight: normal;
+    cursor: pointer;
+    box-shadow: 0px 4px 8px rgba(0, 0, 0, 0.1); 
+}
+
+.button:hover {
+    background-color: #f0f0f0; 
+    box-shadow: 0px 6px 12px rgba(0, 0, 0, 0.2); 
+}
+
+.pb-5 {
+    font-family: "Raleway", sans-serif;
+    font-weight: 150;
+}
+
+.titre {
+    font-family: "Raleway", sans-serif;
+    font-weight: 150;
+    font-size: 60px;
+}
