--- a/templates/base/index.html.twig
+++ b/templates/base/index.html.twig
@@ -11,13 +11,13 @@
 			</div>
 			<div class="carousel-inner">
 				<div class="carousel-item active">
-					<img src="{{asset("css/images/home1.PNG")}}" class="d-block w-100" alt="...">
+					<img src="{{asset("images/home1.PNG")}}" class="d-block w-100" alt="...">
 				</div>
 				<div class="carousel-item">
-					<img src="{{asset("css/images/home2.PNG")}}" class="d-block w-100" alt="...">
+					<img src="{{asset("images/home2.PNG")}}" class="d-block w-100" alt="...">
 				</div>
 				<div class="carousel-item">
-					<img src="{{asset("css/images/home3.PNG")}}" class="d-block w-100" alt="...">
+					<img src="{{asset("images/home3.PNG")}}" class="d-block w-100" alt="...">
 				</div>
 			</div>
 			<button class="carousel-control-prev" type="button" data-bs-target="#carouselExampleIndicators" data-bs-slide="prev">
