--- a/templates/base.html.twig
+++ b/templates/base.html.twig
@@ -60,12 +60,32 @@
 							Rechercher
 						</button>
 					</form>
+					<ul class="navbar-nav me-auto">
+						{% if not is_granted('IS_AUTHENTICATED_FULLY') %}
+							<li class="nav-item">
+								<a class="nav-link" href="{{path('app_login')}}">Se connecter
+								</a>
+							</li>
+							<li class="nav-item">
+								<a class="nav-link" href="{{path('app_register')}}">S'inscrire
+								</a>
+							</li>
+						{% else %}
+							<li class="nav-item">
+								<a class="nav-link" href="{{path('app_logout')}}">
+									{{app.user.email}}
+									<i class="bi
+										bi-x-circle-fill"></i>
+								</a>
+							</li>
+						{% endif %}
+					</div>
 				</div>
-			</div>
-		</nav>
-		{% block body %}{% endblock %}
-		{% block javascripts %}
-			<script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/js/bootstrap.bundle.min.js" integrity="sha384-C6RzsynM9kWDrMNeT87bh95OGNyZPhcTNXj1NW7RuBCsyN/o0jlpcV8Qyq46cDfL" crossorigin="anonymous"></script>
-		{% endblock %}
+			</nav>
+			{% block body %}{% endblock %}
+			{% block javascripts %}
+				<script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/js/bootstrap.bundle.min.js" integrity="sha384-C6RzsynM9kWDrMNeT87bh95OGNyZPhcTNXj1NW7RuBCsyN/o0jlpcV8Qyq46cDfL" crossorigin="anonymous"></script>
+			{% endblock %}
+		</body>
 	</body>
 </html>
