page produit ok

--- a/templates/base.html.twig
+++ b/templates/base.html.twig
@@ -44,10 +44,19 @@
 							<a class="nav-link dropdown-toggle" data-bs-toggle="dropdown" href="" role="button" aria-haspopup="true" aria-expanded="false">Produits</a>
 							<div class="dropdown-menu">
 								<a class="dropdown-item" href="{{ path('app_nouveaute') }}">Nouveautés</a>
-								<a class="dropdown-item" href="">Collection scandinave</a>
-								<a class="dropdown-item" href="">Collection aesthetic coloré</a>
 								<div class="dropdown-divider"></div>
-								<a class="dropdown-item" href="">Une suggestion de collection?</a>
+								<a class="dropdown-item" href="">Plante artificielle</a>
+								<a class="dropdown-item" href="">Chaise</a>
+								<a class="dropdown-item" href="">Table</a>
+								<a class="dropdown-item" href="">Lit</a>
+								<a class="dropdown-item" href="">Table de nuit</a>
+								<a class="dropdown-item" href="">Décoration</a>
+								<a class="dropdown-item" href="">Meuble de télévision</a>
+								<a class="dropdown-item" href="">Commode</a>
+								<a class="dropdown-item" href="">Armoire</a>
+								<a class="dropdown-item" href="">Buffet</a>
+								<a class="dropdown-item" href="">Canapé</a>
+								<a class="dropdown-item" href="">Luminaire</a>
 							</div>
 						</li>
 						<li class="nav-item">
