--- a/public/css/styles.css
+++ b/public/css/styles.css
@@ -36,10 +36,20 @@
 .pb-5 {
     font-family: "Raleway", sans-serif;
     font-weight: 150;
+    font-size: 60px;
 }
 
 .titre {
     font-family: "Raleway", sans-serif;
     font-weight: 150;
     font-size: 60px;
+}
+
+a {
+    text-decoration: none;
+}
+
+.card-title {
+    text-transform: none;
+    letter-spacing: 0px;
 }
