--- a/public/css/styles.css
+++ b/public/css/styles.css
@@ -53,3 +53,28 @@ a {
     text-transform: none;
     letter-spacing: 0px;
 }
+
+.submit {
+    display: inline-block;
+    padding: 10px 20px;
+    border: none;
+    border-radius: 30px;
+    background-color: #ffffff;
+    color: #6C757D;
+    text-align: center;
+    text-decoration: none;
+    font-size: 16px;
+    font-weight: normal;
+    cursor: pointer;
+    box-shadow: 0px 4px 8px rgba(0, 0, 0, 0.287); 
+}
+
+.form-control{
+    border-radius: 30px;
+}
+
+.titrecontact{
+    font-family: "Raleway", sans-serif;
+    font-weight: 150;
+    font-size: 60px;
+}
