--- a/public/css/product.css
+++ b/public/css/product.css
@@ -58,6 +58,7 @@
         cursor: pointer;
         box-shadow: 0px 4px 8px rgba(0, 0, 0, 0.1);
         margin-left: auto;
+        margin-right: 10px;
 }
 
 
@@ -68,3 +69,12 @@
 .pb-5{
     font-size: 60px;
 }
+
+
+
+button:hover {
+  background-color: #eee;
+  transform: scale(105%);
+  animation: movingBorders 3s infinite;
+}
+
