--- a/public/css/styles.css
+++ b/public/css/styles.css
@@ -26,6 +26,7 @@
     font-weight: normal;
     cursor: pointer;
     box-shadow: 0px 4px 8px rgba(0, 0, 0, 0.1); 
+    margin-right: 10px;
 }
 
 .button:hover {
@@ -77,4 +78,37 @@ a {
     font-family: "Raleway", sans-serif;
     font-weight: 150;
     font-size: 60px;
+}
+
+.d-flex {
+        border-radius: 30px;
+        color: #6C757D;
+        text-align: center;
+        text-decoration: none;
+        font-size: 16px;
+        font-weight: normal;
+        cursor: pointer;
+        box-shadow: 0px 4px 8px rgba(0, 0, 0, 0.1);
+        margin-left: auto;
+        margin-right: 10px;
+}
+
+.form-control {
+    font-size: 12px;
+}
+
+.rechercher{
+        border: none;
+        border-radius: 20px;
+        background-color: #ffffff;
+        color: #6C757D;
+        text-align: center;
+        text-decoration: none;
+        font-size: 12px;
+        font-weight: normal;
+        margin-left: auto;
+        margin-right: 10px;
+        margin-top: 5px;
+        margin-bottom: 5px;
+        padding: 0px 15px 0px 15px;
 }
