--- a/templates/produit/article.html.twig
+++ b/templates/produit/article.html.twig
@@ -17,6 +17,15 @@
                 <div class="product-description">{{ meuble.description }}</div>
                 <div class="product-price">{{ meuble.prix }} €</div>
                 <a href="#" class="add-to-cart">Ajouter au panier</a>
+                {% if app.user %}
+                    {% if meuble not in app.user.favoris %}
+                        <a href='{{ path('app_favoris_produit', {'id': meuble.id}) }}'><i class="bi-heart"></i></a>
+                    {% else %}
+                        <a href='{{ path('app_suppfav', {'id': meuble.id}) }}'><i class="bi-heart-fill"></i></a>
+                    {% endif %}
+                {% else %}
+                    <a href="{{ path('app_login') }}"<i class="bi-heart"></i></a>
+                {% endif %}
             </div>
         </div>
     </div>
