--- a/templates/base.html.twig
+++ b/templates/base.html.twig
@@ -38,18 +38,18 @@
 							<div class="dropdown-menu">
 								<a class="dropdown-item" href="{{ path('app_nouveaute') }}">Nouveautés</a>
 								<div class="dropdown-divider"></div>
-								<a class="dropdown-item" href="#">Plante artificielle</a>
-								<a class="dropdown-item" href="#">Chaise</a>
-								<a class="dropdown-item" href="#">Table</a>
-								<a class="dropdown-item" href="#">Lit</a>
-								<a class="dropdown-item" href="#">Table de nuit</a>
-								<a class="dropdown-item" href="#">Décoration</a>
-								<a class="dropdown-item" href="#">Meuble de télévision</a>
-								<a class="dropdown-item" href="#">Commode</a>
-								<a class="dropdown-item" href="#">Armoire</a>
-								<a class="dropdown-item" href="#">Buffet</a>
-								<a class="dropdown-item" href="#">Canapé</a>
-								<a class="dropdown-item" href="#">Luminaire</a>
+								<a class="dropdown-item" href="{{ path('app_plante') }}">Plante artificielle</a>
+								<a class="dropdown-item" href="{{ path('app_chaise') }}">Chaise</a>
+								<a class="dropdown-item" href="{{path('app_table')}}">Table</a>
+								<a class="dropdown-item" href="{{ path('app_lit') }}">Lit</a>
+								<a class="dropdown-item" href="{{ path('app_tabledenuit') }}">Table de nuit</a>
+								<a class="dropdown-item" href="{{ path('app_decoration') }}">Décoration</a>
+								<a class="dropdown-item" href="{{ path('app_meubletele') }}">Meuble de télévision</a>
+								<a class="dropdown-item" href="{{ path('app_commode') }}">Commode</a>
+								<a class="dropdown-item" href="{{ path('app_armoire') }}">Armoire</a>
+								<a class="dropdown-item" href="{{ path('app_buffet') }}">Buffet</a>
+								<a class="dropdown-item" href="{{ path('app_canape') }}">Canapé</a>
+								<a class="dropdown-item" href="{{ path('app_luminaire') }}">Luminaire</a>
 							</div>
 						</li>
 						<li class="nav-item">
