--- a/public/css/styles.css
+++ b/public/css/styles.css
@@ -154,3 +154,19 @@ a {
     font-size: 14px; 
     text-transform: none;
 }
+
+.btnformulaire{
+    display: inline-block;
+    padding: 10px 20px;
+    border: none;
+    border-radius: 30px;
+    background-color: #ffffff;
+    color: #6C757D;
+    text-align: center;
+    text-decoration: none;
+    font-size: 16px;
+    font-weight: normal;
+    cursor: pointer;
+    box-shadow: 0px 4px 8px rgba(0, 0, 0, 0.1); 
+    margin-right: 10px;
+}
