--- a/templates/registration/register.html.twig
+++ b/templates/registration/register.html.twig
@@ -1,24 +1,24 @@
 {% extends 'base.html.twig' %}
 {% block title %}
-	{{parent()}}
-	Inscription
+	{{ parent() }}Inscription
 {% endblock %}
 {% block body %}
-	<div class="container-fluid">
-		<h1 class="text-center text-primary mt-4 pt-4 display-1 fw-bold">Inscription</h1>
-	</h1>
+{{ parent() }}
+<link rel="stylesheet" href="{{ asset('css/styles.css') }}">
+<div class="container-fluid">
 	<div class="row justify-content-center">
-		<div class="col-12 col-md-6 bg-white p-4 m-0 text-primary">
+		<div class="col-12 col-md-6 text-primary bg-white p-4">
+			<h1 class="titrecontact text-center text-primary mt-4 pt-4">Inscription</h1>
 			{{ form_errors(registrationForm) }}
 			{{ form_start(registrationForm) }}
 			{{ form_row(registrationForm.email) }}
-			{{ form_row(registrationForm.plainPassword, {label: 'Password'}) }}
+			{{ form_row(registrationForm.plainPassword, {label: 'Mot de passe'}) }}
 			{{ form_row(registrationForm.agreeTerms) }}
 			<div class="text-center">
-				<button class="btn btn-lg btn-primary mt-2" type="submit">
-					S'inscrire</button>
+				<button class="btnformulaire btn-primary btn-lg mt-4" type="submit">S'inscrire</button>
 			</div>
 			{{ form_end(registrationForm) }}
 		</div>
 	</div>
-</div>{% endblock %}
+</div>
+{% endblock %}
