--- a/templates/base.html.twig
+++ b/templates/base.html.twig
@@ -17,6 +17,7 @@
         {% endblock %}
     </head>
     <body>
+</nav>
         <nav class="navbar navbar-expand-lg bg-body-tertiary">
             <div class="container-fluid">
                 <a class="navbar-brand" href="{{ path('app_accueil') }}">
@@ -31,10 +32,10 @@
                             <a class="nav-link active" href="{{ path('app_accueil') }}">
                                 Accueil
                                 <span class="visually-hidden">(current)</span>
-                            </a>
+                            </a> 
                         </li>
                         <li class="nav-item dropdown">
-                            <a class="nav-link dropdown-toggle" data-bs-toggle="dropdown" href="#" role="button" aria-haspopup="true" aria-expanded="false">Produits</a>
+                            <a class="nav-link dropdown-toggle" data-bs-toggle="dropdown" role="button" aria-haspopup="true" aria-expanded="false">Produits</a>
                             <div class="dropdown-menu">
                                 <a class="dropdown-item" href="{{ path('app_nouveaute') }}">Nouveautés</a>
                                 <div class="dropdown-divider"></div>
@@ -52,8 +53,12 @@
                                 <a class="dropdown-item" href="{{ path('app_luminaire') }}">Luminaire</a>
                             </div>
                         </li>
-                        <li class="nav-item">
-                            <a class="nav-link" href="{{ path('app_contact') }}">Contact</a>
+                        <li class="nav-item dropdown">
+                            <a class="nav-link dropdown-toggle" data-bs-toggle="dropdown" href="{{ path('app_contact') }}" role="button" aria-haspopup="true" aria-expanded="false">Contact</a>
+                            <div class="dropdown-menu">
+                                <a class="dropdown-item" href="{{ path('app_contact') }}">Contact</a>
+                                <a class="dropdown-item" href="#">Mentions légales</a>
+                            </div>
                         </li>
                     </ul>
                     <form class="d-flex" action="{{ path('app_search') }}" method="get">
@@ -63,10 +68,10 @@
                     <ul class="navbar-nav me-auto">
                         {% if not is_granted('IS_AUTHENTICATED_FULLY') %}
                             <li class="nav-item">
-                                <a class="nav-link" href="{{ path('app_login') }}"><span class="small-textconnect">Se connecter</span></a>
+                                <a class="nav-link" href="{{ path('app_login') }}"><i class="bi bi-person"></i><span class="small-textconnect">Se connecter</span></a>
                             </li>
                             <li class="nav-item">
-                                <a class="nav-link" href="{{ path('app_register') }}"><span class="small-textdisconnect">S'inscrire</span></a>
+                                <a class="nav-link" href="{{ path('app_register') }}"><i class="bi bi-person-plus"></i><span class="small-textdisconnect">S'inscrire</span></a>
                             </li>
                         {% else %}
                             <li class="nav-item">
@@ -80,13 +85,19 @@
                                 </a>
                             </li>
                         {% endif %}
+                        <li class="nav-item">
+                            <a class="nav-link" href="{{ path('app_voirpanier') }}">
+                                <i class="bi bi-cart3"></i><span class="small-text">Panier</span>
+                            </a>
+                        </li>
                     </ul>
                 </div>
             </div>
         </nav>
-        {% block body %}{% endblock %}
-        {% block javascripts %}
-            <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/js/bootstrap.bundle.min.js" integrity="sha384-C6RzsynM9kWDrMNeT87bh95OGNyZPhcTNXj1NW7RuBCsyN/o0jlpcV8Qyq46cDfL" crossorigin="anonymous"></script>
+        {% block body %}
         {% endblock %}
+        {% block javascripts %}
+<script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js" ></script>
+{% endblock %}
     </body>
 </html>
