--- a/templates/recherche/results.html.twig
+++ b/templates/recherche/results.html.twig
@@ -19,7 +19,7 @@
                             <h5 class="card-title">{{ meuble.libelle }}</h5>
                         </a>
                         <p class="card-text">{{ meuble.prix }}€</p>
-                        <a href="#" class="ajout-panier">Ajouter au panier</a>
+                        <a href="{{ path('app_ajoutpanier', {'id' : meuble.id}) }}" class="ajout-panier">Ajouter au panier</a>
                         {% if app.user is not null %}
                             {% if meuble not in app.user.favoris %}
                                 <a href="{{ path('app_favoris_produit', {'id' : meuble.id, 'redirect': app.request.uri}) }}"><i class="bi bi-heart"></i></a>
