--- a/templates/base.html.twig
+++ b/templates/base.html.twig
@@ -57,7 +57,7 @@
                             <a class="nav-link dropdown-toggle" data-bs-toggle="dropdown" href="{{ path('app_contact') }}" role="button" aria-haspopup="true" aria-expanded="false">Contact</a>
                             <div class="dropdown-menu">
                                 <a class="dropdown-item" href="{{ path('app_contact') }}">Contact</a>
-                                <a class="dropdown-item" href="#">Mentions légales</a>
+                                <a class="dropdown-item" href="{{ path('app_mentionslegales') }}">Mentions légales</a>
                             </div>
                         </li>
                     </ul>
