--- a/templates/panier/voirpanier.html.twig
+++ b/templates/panier/voirpanier.html.twig
@@ -49,7 +49,7 @@
                         <li class="recap-item"><strong>Livraison :</strong> 4,00€</li>
                         <li class="recap-item"><strong>Total :</strong> {{ total_produits + 4 }}€</li>
                     </ul>
-                    <button ="" class="ajout-panier">Valider ma commande</button>
+                    <a href="{{ path('app_commande') }}" class="btn btn-primary ajout-panier">Valider ma commande</a>
                     <hr>
                     <p class="text-muted">Expédié en 24 heures maximum</p>
                     <p class="text-muted">Frais de port offerts dès 200€ d'achat</p>
